# smart-llm-router

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCY_LICENSES.md  MANIFEST.in  PROVIDER_SETUP.md  README.md  RELEASE_READINESS.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
codex-skill/hermes-smart-llm-router/: SKILL.md
codex-skill/smart-llm-router/: SKILL.md
examples/: adapter_declaration.example.json  adapter_transition.example.json  refresh.cron  task_contract.example.json  workflow_checkpoint.example.json  workflow_contract.example.json
examples/golden-sets/: audit-public-v1.json  execute-public-v1.json  plan-public-v1.json  qa-public-v1.json  verify-public-v1.json
hermes-skill/model-routing-foundation/: SKILL.md
research/runs/20260718-adaptive-routing-method-scan/: method-notes.md  mission.md  p1-golden-promotion-results.md  p1-role-suite-expansion-results.md  source-scorecard.json  upgrade-proposals.md  (+1 more)
smart_llm_router/: cli.py  config.py  credential_catalog.py  evaluation.py  governance.py  lifecycle.py  router.py
tests/: test_adapter_lifecycle.py  test_cli.py  test_config.py  test_credential_catalog.py  test_dynamic_discovery.py  test_evaluation.py  test_governance.py  test_preprocess.py  test_public_package_boundaries.py  test_role_routing.py  test_route_stats.py  test_router_cooldowns.py  test_specialized_adapters.py  test_task_descriptor_v2.py  test_workflow_governance.py
tests/fixtures/: task_descriptor_v2_adversarial.json  task_descriptor_v2_calibration.json
(+20 files in other folders)
