[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-llm-router"
version = "0.6.0rc2"
description = "Cost-aware smart LLM and vision router with free-pool probing, cooldowns, and paid fallback."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
keywords = ["llm", "routing", "multimodal", "cost-control", "model-governance"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "httpx>=0.27",
  "Pillow>=10.0",
  "python-dotenv>=1.0",
]

[project.scripts]
smart-llm-router = "smart_llm_router.cli:main"

[project.urls]
Homepage = "https://github.com/kmwhat/smart-llm-router"
Repository = "https://github.com/kmwhat/smart-llm-router"
Issues = "https://github.com/kmwhat/smart-llm-router/issues"
Changelog = "https://github.com/kmwhat/smart-llm-router/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["smart_llm_router"]
